# esda

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.html  benchmark_crand.py  environment.yml  genindex.html  index.html  installation.html  moran-perf.ipynb  objects.inv  perf-comparison.ipynb  pr_description_215.md  prange_crand_issue.md  pyproject.toml  references.html  regions.gpkg  requirements.txt  requirements_docs.txt  requirements_plus.txt  requirements_tests.txt  search.html  searchindex.js  setup.cfg  setup.py  test_randomization.py  tutorial.html  versions.json
.github/workflows/: build_docs.yml  testing.yml  unittests.yml  upload_package.yml
_modules/: index.html
_modules/esda/: adbscan.html  correlogram.html  gamma.html  geary.html  geary_local.html  geary_local_mv.html  getisord.html  join_counts.html  join_counts_local.html  join_counts_local_bv.html  join_counts_local_mv.html  lee.html  losh.html  moran.html  moran_local_mv.html  shape.html  silhouettes.html  smaup.html  util.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  tutorial.rst.txt
_sources/notebooks/: adbscan_berlin_example.ipynb.txt  shape-measures.ipynb.txt
_static/: documentation_options.js  references.bib
ci/: 310-DEV.yaml  310-numba-DEV.yaml  310-numba-oldest.yaml  310-numba.yaml  310-oldest.yaml  310.yaml  311-DEV.yaml  311-latest.yaml  311-numba-DEV.yaml  311-numba-latest.yaml  311-numba-oldest.yaml  311-numba.yaml  311-oldest.yaml  311.yaml  312-dev.yaml  312-latest.yaml  312-min.yaml  312-numba-dev.yaml  312-numba-latest.yaml  312-numba-oldest.yaml  312-oldest.yaml  313-dev.yaml  313-latest.yaml  313-min.yaml  313-numba-dev.yaml  313-numba-latest.yaml  314-dev.yaml  314-latest.yaml  314-min.yaml  314-numba-dev.yaml  314-numba-latest.yaml  36-numba.yaml  36.yaml  37-numba.yaml  37.yaml  38-minimal-numba.yaml  38-minimal.yaml  38-numba.yaml  38.yaml  39-numba.yaml  (+1 more)
dev/: api.html  genindex.html  index.html  installation.html  objects.inv  references.html  searchindex.js  sitemap.xml
dev/_static/: documentation_options.js  references.bib
dev/user-guide/: LOSH.html  adbscan_berlin_example.html  correlogram.html  diagnostics.html  geary.html  geometry.html  geosilhouettes.html  getisord.html  getting_started.html  global.html  global_morans_i.html  index.html  join_counts.html  local.html  local_geary.html  local_getisord.html  local_spatial_autocorrelation.html  localjoincounts.html  multivariable_moran.html  shape-measures.html  topo.html  topology.html
doc/: api.rst  index.rst  installation.rst
doc/_static/: references.bib
docs/: .buildinfo  Makefile  api.html  api.rst  conf.py  environment.yaml  genindex.html  index.html  index.rst  installation.html  installation.rst  objects.inv  references.html  search.html  searchindex.js  tutorial.html  tutorial.rst
docs/_modules/: index.html
docs/_sources/: api.rst.txt  index.rst.txt  tutorial.rst.txt
docs/_static/: references.bib
docs/notebooks/: adbscan_berlin_example.html  geosilhouettes.html  geosilhouettes.ipynb  joincounts.html  localgeary.ipynb  localjoincounts.ipynb  spatialautocorrelation.html  spatialautocorrelation.ipynb
docs/source/: api.rst  conf.py  index.md  installation.rst
docsrc/: Makefile  api.rst  conf.py  index.rst  installation.rst
docsrc/_static/: references.bib
docsrc/notebooks/: adbscan_berlin_example.ipynb  geosilhouettes.ipynb  joincounts.ipynb
esda/: __init__.py  _optimal_compactness.py  _version.py  adbscan.py  correlogram.py  counterfactuals.py  crand.py  crand_perf_nogit.py  crand_perf_sim.py  emerging.py  functions.py  gamma.py  geary.py  geary_local.py  geary_local_mv.py  getisord.py  inspection.py  join_count_local.py  join_count_local_bv.py  join_count_local_mv.py  join_counts.py  join_counts_local.py  join_counts_local_bv.py  join_counts_local_mv.py  lee.py  local_geary.py  local_geary_mv.py  local_join_count.py  local_join_count_bv.py  local_join_count_mv.py  losh.py  map_comparison.py  map_correspondence.py  mapclassify.py  missing.py  mixture_smoothing.py  moran.py  moran_local_mv.py  mvmo.py  ripley.py  (+8 more)
esda/tests/: conftest.py  test_adbscan.py  test_correlogram.py  test_crand.py  test_emerging.py  test_gamma.py  test_geary.py  test_getisord.py  test_inspection.py  test_issue_197.py  test_issue_342.py  test_join_counts.py  test_lee.py  test_ljc.py  test_ljc_bv.py  test_ljc_mv.py  test_local_geary.py  test_local_geary_mv.py  test_losh.py  test_map_comparison.py  test_mapclassify.py  test_missing.py  test_mixture_smoothing.py  test_moran.py  test_moran_local_mv.py  test_numba_permutations.py  test_optimal_compactness.py  test_shape.py  test_significance.py  test_silhouette.py  test_smaup.py  (+3 more)
notebooks/: LOSH.html  LOSH.ipynb  Spatial Autocorrelation for Areal Unit Data.html  Spatial Autocorrelation for Areal Unit Data.ipynb  adbscan.ipynb  adbscan_berlin_example.html  adbscan_berlin_example.ipynb  adbscan_toy_demo.html  adbscan_toy_demo.ipynb  correlogram.html  correlogram.ipynb  geosilhouettes.html  geosilhouettes.ipynb  joincounts.html  joincounts.ipynb  localjoincounts.html  localjoincounts.ipynb  moran_matrix_example.ipynb  multivariable_moran.html  multivariable_moran.ipynb  shape-measures.html  shape-measures.ipynb  spatial_autocorrelation_for_areal_unit_data.html  spatial_autocorrelation_for_areal_unit_data.ipynb  spatialautocorrelation.html  topo.html  topo.ipynb
stable/: .buildinfo  genindex.html  index.html  objects.inv  references.html  searchindex.js  sitemap.xml  tutorial.html
tests/: test_adbscan.py  test_gamma.py  test_geary.py  test_getisord.py  test_join_counts.py  test_lee.py  test_moran.py  test_silhouette.py  test_smaup.py  test_smoothing.py  test_util.py
tools/: gitcount.ipynb  moran_correctness.ipynb
v2.10.0/: .buildinfo  api.html  objects.inv  searchindex.js
v2.9.0/: .buildinfo  .buildinfo.bak  api.html  index.html  installation.html  references.html  search.html  searchindex.js  sitemap.xml  tutorial.html
(+229 files in other folders)
