[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "esda"
dynamic = ["version"]
authors = [
    { name = "Serge Rey", email = "sjsrey@gmail.com" },
    { name = "Levi Wolf", email = "levi.john.wolf@bristol.ac.uk" },
]
maintainers = [{ name = "esda contributors" }]
license = { text = "BSD 3-Clause" }
description = "Exploratory Spatial Data Analysis in PySAL"
keywords = ["exploratory data analysis, spatial statistics"]
readme = { text = """\
Exploratory Spatial Data Analysis in PySAL


.. _PySAL: http://pysal.org
""", content-type = "text/x-rst" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
    "geopandas>=0.14",
    "libpysal>=4.12",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "shapely>=2.1",
]


[project.urls]
Home = "https://pysal.org/esda/"
Repository = "https://github.com/pysal/esda"

[project.optional-dependencies]
plus = [
    "matplotlib>=3.8",
    "numba>=0.58",
    "rtree>=1.1",
    "seaborn>=0.12",
]
tests = [
    "codecov",
    "folium>=0.15",
    "mapclassify>=2.6",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "ruff",
    "pre-commit"
]
docs = [
    "nbsphinx",
    "numpydoc",
    "pandoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_bootstrap_theme",
]
notebooks = [
    "matplotlib-scalebar",
    "watermark",
]


[tool.setuptools.packages.find]
include = ["esda", "esda.*"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
lint.select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
lint.ignore = [
    "B006",
    "B008",
    "B009",
    "B010",
    "C408",
    "E731",
    "F401",
    "F403",
    "N803",
    "N806",
    "N999",
    "UP007"
]
exclude = ["docs/*"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E402",  # Module level import not at top of cell
]

[tool.coverage.run]
source = ["./esda"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["esda/tests/*", "docs/conf.py"]