[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "esda"
dynamic = ["version"]
authors = [
    { name = "Serge Rey", email = "sjsrey@gmail.com" },
    { name = "Levi Wolf", email = "levi.john.wolf@bristol.ac.uk" },
]
maintainers = [{ name = "esda contributors" }]
license = { text = "BSD 3-Clause" }
description = "Exploratory Spatial Data Analysis in PySAL"
keywords = ["exploratory data analysis, spatial statistics"]
readme = { text = """\
Exploratory Spatial Data Analysis in PySAL


.. _PySAL: http://pysal.org
""", content-type = "text/x-rst" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0",
    "libpysal>=4.12",
    "numpy>=2.1",
    "pandas>=2.3",
    "scikit-learn>=1.6",
    "scipy>=1.14",
    "shapely>=2.1",
]


[project.urls]
Home = "https://pysal.org/esda/"
Repository = "https://github.com/pysal/esda"

[project.optional-dependencies]
plus = [
    "matplotlib>=3.10",
    "numba>=0.61",
    "rtree>=1.3",
    "seaborn>=0.13",
]
tests = [
    "codecov",
    "folium>=0.17",
    "geodatasets",
    "mapclassify>=2.7",
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-xdist",
]
dev = [
    "ruff",
    "pre-commit",
]
docs = [
    "mkdocs-jupyter",
    "myst_nb",
    "myst-parser",
    "nbsphinx",
    "numpydoc",
    "pandoc",
    "sphinx>8,<10",  # See PR #488
    "sphinxcontrib-bibtex",
    "sphinx_bootstrap_theme",
    "sphinx-copybutton",
    "sphinx-immaterial",
]
notebooks = [
    "matplotlib-scalebar",
    "watermark",
]


[tool.setuptools.packages.find]
include = ["esda", "esda.*"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
lint.select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
lint.ignore = [
    "B006",  # Do not use mutable data structures for argument defaults
    "C408",  # Unnecessary `*` call (rewrite as a literal)
    "N801",  # Class name `*` should use CapWords convention
    "N802",  # Function name `*` should be lowercase
    "N803",  # Argument name * should be lowercase
    "N806",  # Variable * in function should be lowercase
]


[tool.ruff.lint.per-file-ignores]
"esda/__init__.py" = [
    "F401",  #  `*` imported but unused; consider removing, adding to `__all__`, or using a redundant alias
]
"*.ipynb" = [
    "E402",  # Module level import not at top of cell
]

[tool.coverage.run]
source = ["./esda"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["esda/tests/*", "docs/conf.py"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Geometry is in a geographic CRS",
    "ignore:divide by zero encountered",
    "ignore:invalid value encountered",
    "ignore:Numba not imported, so alpha shape construction may be slower",
]
